--- a/ipd.html
+++ b/ipd.html
@@ -61,20 +61,24 @@
         <div class="col-md-4">
           <p>Problem:  Sam runs 5 days a week. Since he only does laundry every 2 weeks, he often wears running shorts multiple times. He doesn’t know where to put them after he wears them once, so they pile up on his floor and smell gross, especially after a few days.
           </p>
-          <p>Solution:  Intermediate Clothing Cleaning - remove smell and dampness so clothing can be worn again FreshGear allows already worn but not dirty clothing to dry out and return to freshness for re-wear.</p>
+          <p>Solution:  Intermediate Clothing Cleaning - remove smell and dampness so clothing can be worn again FreshGear allows already worn but not dirty clothing to dry out and return to freshness for re-wear. This also creates a 'home' for clothing worn once, previously homeless because users didn't want to put clothes back in a dresser with clean clothes, or in the hamper where they would get even dirtier.</p>
         </div>
         </div>
         <hr></hr>
         <div class="row">
-        <div class="col-md-4" >
-          <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-          <h2>Project 2</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <div class="col-md-2" >
+          <img style="width:90%"  align="middle" src="images/ipd/finalprototype.jpg"> 
+        </div>
+        <div class="col-md-2">
+           <p>My team of two engineers, three business students and one industrial desiger worked together to create a clothing storage prototype that reduces "funk" in clothing that has already been worn once. This allows the user to re-wear clothing, reducing amount of clothing needed, as well as laundry. </p>
+           <p>What makes clothes dirty?</p>
+           <p> Users said "funk", " worn it twice", "smell", "<i>actual</i> dirt"</p>
         </div>
         <div class="col-md-4" >
-          <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-          <h2>Project 2</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <img style="width:90%"  align="middle" src="images/ipd/iterative1.png"> 
+          <h3>Iterative Design</h3>
+          <p>One of our intermediate designs combined a dirty laundry hamper with a once-worn clothing container that included a UV light to kill smell-causing bacteria.</p>
+          <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes.</p>
         </div>
         <div class="col-md-4" >
           <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
